# vlm-rl

./: .gitignore  PROBLEMS.md  README.md  environment.yaml  pyproject.toml
configs/: accelerate_2x4090.yaml  deepspeed_zero2.json  grpo_qwen3b_geoqa.yaml  grpo_qwen7b_geoqa.yaml
docs/: DECISIONS.md  EXPERIMENTS.md  PROBLEMS.md
notebooks/: analysis.ipynb
scripts/: download_data.sh  run_baseline.sh  run_dpo.sh  run_eval.sh  run_grpo.sh  run_prm_pipeline.sh  run_reward_lm_scoring.sh  run_sft.sh  sanity_check.sh  setup_env.sh
src/data/: download.py  formatting.py  prepare.py
src/eval/: analysis.py  baseline.py  benchmark.py  best_of_n.py  validate_reward_lm.py
src/rewards/: combined.py  format.py  outcome.py  reward_lm.py
src/training/: distill_prm.py  dpo.py  generate_trajectories.py  grpo.py  sft.py
src/utils/: model.py  wandb_utils.py
