[project]
name = "vlm-rl"
version = "0.1.0"
description = "RL for visual reasoning in multimodal LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "peft>=0.13.0",
    "accelerate>=0.34.0",
    "datasets>=3.0.0",
    "qwen-vl-utils",
    "wandb",
    "Pillow",
    "pandas",
    "pyarrow",
    "tqdm",
]

[project.optional-dependencies]
eval = [
    "lmms-eval",
]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
